# missional-ai

./: .gitignore  00_getting_started.ipynb  01_macula_data_overview.ipynb  02_semantic_domains_overview.ipynb  03_domain_topic_modelling.ipynb  04_levinsohn_discourse_features.ipynb  05_syntax_knowledge_graph.ipynb  06_macula_greek_pandas.ipynb  07_Alignments.ipynb  README.md  pyproject.toml  syntax_knowledge_graph.ipynb
data/: README.md
data/alignments/eng/LEB/: NA27-LEB-manual.json
data/sources/: NA27-LEB.tsv
data/targets/: NA27-LEB.tsv
