[tool.poetry]
name = "missional-ai"
version = "0.1.0"
description = "Machine Learning notebooks for Missional AI"
authors = ["Ryder Wishart"]
license = "MIT License"
readme = "README.md"
#packages = [{include = "biblical_machine_learning"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
jupyterlab = "^3.6"
pandas = "^1.5"
bible-alignments = ">=0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
